crates/test-ui/ui/msg_send_no_return_type.stderr
error[E0283]: type annotations needed
 --> ui/msg_send_no_return_type.rs
  |
  |     unsafe { msg_send![cls, new] };
  |              ^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `_: ConvertReturn<MethodFamily<1>>` found in the `objc2` crate:
          - impl<MethodFamily> ConvertReturn<MethodFamily> for bool;
          - impl<T, MethodFamily> ConvertReturn<MethodFamily> for T
            where T: EncodeReturn;
          - impl<T> ConvertReturn<MethodFamily<1>> for Option<Retained<T>>
            where T: Message;
          - impl<T> ConvertReturn<MethodFamily<1>> for Retained<T>
            where T: Message;
  = note: required for `MethodFamily<1>` to implement `RetainSemantics<&AnyClass, _, KindSendMessage>`
  = note: required for `MethodFamily<1>` to implement `MsgSend<&AnyClass, _>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
